# telegram_bot_rust_torob

./: Cargo.toml
src/: lib.rs  main.rs
src/services/: accounting.rs  category_service.rs  mod.rs  product_image_service.rs  product_service.rs  tools_method.rs
src/services/models/: category.rs  mod.rs  product.rs  product_image.rs
src/telegram_infrastructure/: endpoints.rs  mod.rs  telegram_bot.rs
src/telegram_infrastructure/models/: command.rs  state.rs
src/utilities/: mod.rs  session.rs  site.rs  token.rs
