[package]
name = "telegram_bot_torob"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls", "multipart"] }
once_cell = "1.21.3"
serde = "1.0.219"
unicode-width = "0.2.1"
serde_json = "1.0.143"
teloxide = { version = "0.12", features = ["macros"] }
cookies = "0.0.2"
